# MP3_Player_Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOld.txt  stm32f4.ld
FreeRTOS/: list.c  queue.c  tasks.c
FreeRTOS/config/: FreeRTOSConfig.h
FreeRTOS/include/: FreeRTOS.h  portable.h
Include/: MP3_Player.h  main.h
MP3_Player/: Makefile  generated.stm32f746ngh6.ld  main.c  main.h
Source/: MP3_Player.c  main.c
cmake/: libopencm3.cmake  project.cmake  toolchain.cmake  warnings.cmake
include/: main.h
old/: CMakeLists.txt  Makefile  rules.mk
src/: main.c
